--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h3>My Links</h3>
     <ul>
       <li><a href="./public/contact.html"> Contact me </a></li>
-      <li><a href="/public/about.html"> About me </a></li>
+      <li><a href="./public/about.html"> About me </a></li>
     </ul>
   </body>
 </html>
